--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,11 @@
     "tests"
   ],
   "dependencies": {
-    "angularjs": "~1.4.1"
+    "angular-form-builder": "git@github.com:tatums/angular-form-builder.git#0.1.1",
+    "express": "~4.12.4",
+    "socket.io": "~1.3.5",
+    "angular-route": "~1.4.1",
+    "angular-resource": "~1.4.1",
+    "bootstrap": "~3.2.0"
   }
 }
