--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.13.1",
     "express": "~4.12.4",
+    "express-session": "^1.11.3",
     "mongoose": "^4.0.5",
     "mongoose-time": "^0.1.0",
     "morgan": "^1.6.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-develop-server": "^0.4.3",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6"
