--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "mongoose": "^4.0.5",
     "mongoose-time": "^0.1.0",
     "morgan": "^1.6.0",
-    "socket.io": "~1.3.5"
+    "passport": "^0.2.2",
+    "passport-google-oauth": "^0.2.0",
+    "socket.io": "~1.3.5",
+    "yaml-config": "^0.3.0"
   },
   "author": "",
   "license": "ISC",
