--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "body-parser": "^1.13.1",
+    "connect-mongo": "^0.8.1",
+    "cookie-parser": "^1.3.5",
     "express": "~4.12.4",
     "express-session": "^1.11.3",
     "mongoose": "^4.0.5",
@@ -15,6 +17,7 @@
     "morgan": "^1.6.0",
     "passport": "^0.2.2",
     "passport-google-oauth": "^0.2.0",
+    "passport.socketio": "^3.5.1",
     "socket.io": "~1.3.5",
     "yaml-config": "^0.3.0"
   },
